<resources>
    <string name="app_name">MiDoctor</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="title_historial">Historial</string>
    <string name="title_servicios">Servicios</string>
    <string name="title_perfil">Perfil</string>
    <string name="savechanges">Guardar Cambios</string>
    <string name="changepass">Cambiar Constraseña</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="btnadquirir">Agendar Prueba</string>
    <string name="btnaddamb">Adquirir Ambulancia</string>
    <string name="btncitavacuna">Realizar Cita</string>
    <string name="btnfecha">Fecha</string>
    <string name="btnhora">Hora</string>
    <string name="btnaddvac">Agendar Vacuna</string>

    <string-array name="vacunas">
        <item>Difteria</item>
        <item>Hepatitis A</item>
        <item>Hepatitis B</item>
        <item>COVID</item>
    </string-array>
    <string name="title_activity_principal_menu">PrincipalMenu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>