<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_historial">

    <fragment
        android:id="@+id/navigation_historial"
        android:name="com.example.midoctor.ui.Historial.HistorialFragment"
        android:label="@string/title_historial"
        tools:layout="@layout/fragment_historial" />

    <fragment
        android:id="@+id/navigation_servicios"
        android:name="com.example.midoctor.ui.Servicios.ServiciosFragment"
        android:label="@string/title_servicios"
        tools:layout="@layout/fragment_servicios" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.midoctor.ui.Perfil.PerfilFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>